--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,3 @@
-version: "3.9"
-
-networks:
-  web:
-    external: true
-  internal:
-    external: false
-    driver: bridge
-
 services:
   caddy:
     build: ./caddy
@@ -16,7 +7,7 @@ services:
       - "80:80"
       - "443:443"
     networks:
-      - web
-      - internal
+      - bridge
+      - host
   portainer:
     image: portainer/portainer-ce:latest
