--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,10 @@
+networks:
+  web:
+    external: true
+  internal:
+    external: false
+    driver: bridge
+
 services:
   caddy:
     build: ./caddy
@@ -7,7 +14,9 @@ services:
       - "80:80"
       - "443:443"
     networks:
-      - bridge
-      - host
+      - web
+      - internal
   portainer:
     image: portainer/portainer-ce:latest
+    networks:
+      - internal
